--- a/msvc/opengl2opencv.vcxproj.filters
+++ b/msvc/opengl2opencv.vcxproj.filters
@@ -9,16 +9,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="..\src\glfwapp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\time.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\src\opengl2opencv.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
